--- a/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
@@ -2658,13 +2658,13 @@ msgstr ""
 "changer?"
 
 #: ../code/application/views/restricted/user_group_quote.php:137
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "When will you be ready to make a payment to secure your booking with a 20%% "
 "deposit?"
 msgstr ""
 "Quand serez-vous prêt à faire un paiement pour garantir votre réservation "
-"avec un acompte de 20% ?"
+"avec un acompte de 20%%?"
 
 #: ../code/application/views/restricted/user_group_quote.php:150
 msgid "Group booking quote information"
@@ -2792,13 +2792,13 @@ msgstr ""
 "disponible 49 jours avant la date d'arrivée."
 
 #: ../code/application/views/restricted/user_group_quote.php:316
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "All card payments incur a 2%% fee and all bank fees are to be paid by the "
 "booking party."
 msgstr ""
-"Tous les paiements par carte ont des frais de 2% supplémentaires et tous les "
-"frais bancaires sont à la charge du client."
+"Tous les paiements par carte ont des frais de 2%% supplémentaires et tous "
+"les frais bancaires sont à la charge du client."
 
 #: ../code/application/views/restricted/user_group_quote.php:318
 msgid ""
@@ -5693,9 +5693,9 @@ msgid "Fun"
 msgstr "Amusement"
 
 #: ../code/application/views/helpfile/pofields.php:293
-#, fuzzy, php-format
+#, php-format
 msgid "Payer seulement 10%% maintenant"
-msgstr " "
+msgstr "Payez seulement 10%% maintenant"
 
 #: ../code/application/views/helpfile/pofields.php:294
 #, php-format
@@ -6975,14 +6975,14 @@ msgid "Selected filters:"
 msgstr "Filtres sélectionnés:"
 
 #: ../code/application/views/helpfile/pofields.php:605
-#, fuzzy, php-format
+#, php-format
 msgid "Total Number of people in your groups: %s"
 msgstr "Nombre total de personnes de votre groupe: %s"
 
 #: ../code/application/views/helpfile/pofields.php:606
-#, fuzzy, php-format
+#, php-format
 msgid "If the offer is accepted, the balance must be paid by %s"
-msgstr "Si l'offre est acceptée, le solde devra être payé le %s"
+msgstr "Si l'offre est acceptée, le solde devra être payé avant le %s"
 
 #: ../code/application/views/helpfile/pofields.php:607
 #, php-format
@@ -6995,9 +6995,9 @@ msgid "Your changes has been saved successfully"
 msgstr "Vos modifications ont bien été enregistrées"
 
 #: ../code/application/views/helpfile/pofields.php:609
-#, fuzzy, php-format
+#, php-format
 msgid "Next available property"
-msgstr "Aucune chambre n'est disponible pour cet établissement."
+msgstr "Propriété disponible suivante"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
