--- a/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-19 22:19+0200\n"
+"PO-Revision-Date: 2013-02-20 22:16+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2628,11 +2627,11 @@ msgid "Are the dates and number of people confirmed or will they change?"
 msgstr "宿泊日、人数は確定ですか？変更の可能性はありますか？"
 
 #: ../code/application/views/restricted/user_group_quote.php:137
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "When will you be ready to make a payment to secure your booking with a 20%% "
 "deposit?"
-msgstr "ご予約確定には20％%の保証金が必要です。お支払い可能日はいつ頃ですか？"
+msgstr "ご予約確定には20%%の保証金が必要です。お支払い可能日はいつ頃ですか？"
 
 #: ../code/application/views/restricted/user_group_quote.php:150
 msgid "Group booking quote information"
@@ -2751,12 +2750,12 @@ msgstr ""
 "は到着日の40日前の為替ルートが適用されます。"
 
 #: ../code/application/views/restricted/user_group_quote.php:316
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "All card payments incur a 2%% fee and all bank fees are to be paid by the "
 "booking party."
 msgstr ""
-"クレジットカードご利用には２%％の手数料が発生し、銀行手数料はご予約者様のご負"
+"クレジットカードご利用には２%%の手数料が発生し、銀行手数料はご予約者様のご負"
 "担とさせていただきます。"
 
 #: ../code/application/views/restricted/user_group_quote.php:318
@@ -6679,7 +6678,7 @@ msgid ""
 "We want to make sure you are 100%% satisfied, so do not hesitate to contact "
 "us."
 msgstr ""
-"お客様の１００％%満足が目標です。何かございましたらご遠慮なくお問合せくださ"
+"お客様の１００%%満足が目標です。何かございましたらご遠慮なくお問合せくださ"
 "い。"
 
 #: ../code/application/views/helpfile/pofields.php:583
@@ -6827,9 +6826,9 @@ msgid "Your changes has been saved successfully"
 msgstr "変更内容が保存されました"
 
 #: ../code/application/views/helpfile/pofields.php:609
-#, fuzzy, php-format
+#, php-format
 msgid "Next available property"
-msgstr "お部屋は、このプロパティには使用できません。"
+msgstr "次にご予約可能な施設"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
