--- a/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang_ho.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-17 16:50+0200\n"
+"PO-Revision-Date: 2013-02-20 22:24+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -2658,12 +2658,12 @@ msgid "Are the dates and number of people confirmed or will they change?"
 msgstr "As datas e os números de pessoas são confirmados ou isso pode mudar?"
 
 #: ../code/application/views/restricted/user_group_quote.php:137
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "When will you be ready to make a payment to secure your booking with a 20%% "
 "deposit?"
 msgstr ""
-"Quando você estará pronto para efetuar o pagamento de 20% de depósito que "
+"Quando você estará pronto para efetuar o pagamento de 20%% de depósito que "
 "irá garantir sua reserva?"
 
 #: ../code/application/views/restricted/user_group_quote.php:150
@@ -2789,12 +2789,12 @@ msgstr ""
 "disponível 49 dias antes da data de chegada."
 
 #: ../code/application/views/restricted/user_group_quote.php:316
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "All card payments incur a 2%% fee and all bank fees are to be paid by the "
 "booking party."
 msgstr ""
-"Todos os pagamentos por cartão serão cobrados uma taxa de 2% e todas as "
+"Todos os pagamentos por cartão serão cobrados uma taxa de 2%% e todas as "
 "taxas bancárias devem ser pagas pela grupo reservado.  "
 
 #: ../code/application/views/restricted/user_group_quote.php:318
@@ -5679,9 +5679,9 @@ msgid "Fun"
 msgstr "Diversão"
 
 #: ../code/application/views/helpfile/pofields.php:293
-#, fuzzy, php-format
+#, php-format
 msgid "Payer seulement 10%% maintenant"
-msgstr "Pague somente 10% agora"
+msgstr "Pague somente 10%% agora"
 
 #: ../code/application/views/helpfile/pofields.php:294
 #, php-format
@@ -6814,13 +6814,13 @@ msgstr ""
 "por favor, avise-nos imediatamente."
 
 #: ../code/application/views/helpfile/pofields.php:581
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "We want to make sure you are 100%% satisfied, so do not hesitate to contact "
 "us."
 msgstr ""
-"Nós desejamos que você esteja 100% satisfeito, então não hesite em nos "
-"contactar."
+"Nós queremos garantir que você esteja 100%% satisfeito, então não hesite em "
+"entrar em contato conosco"
 
 #: ../code/application/views/helpfile/pofields.php:583
 #, php-format
@@ -6947,34 +6947,34 @@ msgstr ""
 "datas na caixa no topo direito"
 
 #: ../code/application/views/helpfile/pofields.php:604
-#, fuzzy, php-format
+#, php-format
 msgid "Selected filters:"
-msgstr "Filtros selecionados"
+msgstr "Filtros selecionados:"
 
 #: ../code/application/views/helpfile/pofields.php:605
-#, fuzzy, php-format
+#, php-format
 msgid "Total Number of people in your groups: %s"
 msgstr "Número total de pessoas no grupo: %s"
 
 #: ../code/application/views/helpfile/pofields.php:606
-#, fuzzy, php-format
+#, php-format
 msgid "If the offer is accepted, the balance must be paid by %s"
-msgstr "Se a oferta for aceitável, o total deve ser pago em %s"
+msgstr "Se a oferta for aceita, o saldo deverá ser pago até %s"
 
 #: ../code/application/views/helpfile/pofields.php:607
 #, php-format
 msgid "The request cannot be fulfilled due to bad syntax"
-msgstr ""
+msgstr "A solicitação não pode ser completada devido a um erro de sintaxe"
 
 #: ../code/application/views/helpfile/pofields.php:608
-#, fuzzy, php-format
+#, php-format
 msgid "Your changes has been saved successfully"
-msgstr "Seu pedido de apoio foi enviada com sucesso."
+msgstr "As mudanças foram salvas com sucesso"
 
 #: ../code/application/views/helpfile/pofields.php:609
-#, fuzzy, php-format
+#, php-format
 msgid "Next available property"
-msgstr "Não há vagas disponiveis neste estabelecimento"
+msgstr "Próxima propriedade disponível"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
