--- a/languages/ci/locale/cs_CZ/LC_MESSAGES/auberge_lang_ml.po
+++ b/languages/ci/locale/cs_CZ/LC_MESSAGES/auberge_lang_ml.po
@@ -3,18 +3,18 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2012-10-13 07:18-0800\n"
-"Last-Translator: Mc web <info@mcwebmanagement.com>\n"
+"PO-Revision-Date: 2013-02-20 23:55+0200\n"
+"Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: .\n"
-"X-Poedit-Language: French\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: C:\\Users\\Louis-Michel\\workspace_pweb\\auberges"
 "\\trunk\\system\\application\n"
 "X-Poedit-SearchPath-1: F:\\5 - Eclipse Workspace\\AubergeSVN\\auberges\\trunk"
@@ -2608,7 +2608,7 @@ msgstr "Zatím jste nenapsal žádnou recenzi."
 
 #: ../code/application/views/restricted/user_group_quote.php:63
 msgid "Your personalized group booking quote - Here is your offer!"
-msgstr ""
+msgstr "Cenová nabídka podle vašich požadavků - zde je!"
 
 #: ../code/application/views/restricted/user_group_quote.php:66
 #: ../code/application/views/helpfile/pofields.php:205
@@ -2618,7 +2618,7 @@ msgstr "Podrobnosti:"
 
 #: ../code/application/views/restricted/user_group_quote.php:98
 msgid "Total Number of people in your group"
-msgstr ""
+msgstr "Celkový počet lidí ve vaší skupině"
 
 #: ../code/application/views/restricted/user_group_quote.php:111
 msgid ""
@@ -2626,25 +2626,28 @@ msgid ""
 "available. If you can answer the following questions, we will do our best to "
 "find you the perfect property:"
 msgstr ""
+"Prosím prohlédněte si níže uvedené dočasné příklady ubytování, které je k "
+"dispozici.Můžete-li zodpovědět následující otázky, budeme se maximálně "
+"snažit najít vám perfektní ubytování:"
 
 #: ../code/application/views/restricted/user_group_quote.php:115
 msgid "Are you happy with the types of rooms suggested below?"
-msgstr ""
+msgstr "Jste spokojeni s níže navrženým typem pokojů?"
 
 #: ../code/application/views/restricted/user_group_quote.php:122
 msgid "What is your budget?"
-msgstr ""
+msgstr "Jaký je váš rozpočet?"
 
 #: ../code/application/views/restricted/user_group_quote.php:130
 msgid "Are the dates and number of people confirmed or will they change?"
-msgstr ""
+msgstr "Potvrzujete data a počty lidí nebo je budete měnit?"
 
 #: ../code/application/views/restricted/user_group_quote.php:137
 #, php-format
 msgid ""
 "When will you be ready to make a payment to secure your booking with a 20%% "
 "deposit?"
-msgstr ""
+msgstr "Kdy budete připraveni zaplatit 20%% zálohu k zajištění své rezervace ?"
 
 #: ../code/application/views/restricted/user_group_quote.php:150
 #, fuzzy
@@ -2660,12 +2663,14 @@ msgid ""
 "Please have a look at the offer below and check our website to get more "
 "information about the property."
 msgstr ""
+"Prosím podívejte se na níže uvedenou nabídku a pro více informací o relitách "
+"si prohlédněte naši webovou stránku."
 
 #: ../code/application/views/restricted/user_group_quote.php:160
 #: ../code/application/views/helpfile/pofields.php:597
 #, php-format
 msgid "Beds have been put aside for your group until the following date:"
-msgstr ""
+msgstr "Lůžka pro vaši skupinu jsme dali stranou až do data:"
 
 #: ../code/application/views/restricted/user_group_quote.php:165
 #: ../code/application/views/helpfile/pofields.php:598
@@ -2674,6 +2679,8 @@ msgid ""
 "After this date, these beds will be released to other groups, so do not wait "
 "to book!"
 msgstr ""
+"Po tomto datu budou lůžka uvolněna pro další skupiny,neváhejte tedy s "
+"rezervací\"!"
 
 #: ../code/application/views/restricted/user_group_quote.php:174
 #, fuzzy
@@ -2688,7 +2695,7 @@ msgstr "co je v ceně"
 
 #: ../code/application/views/restricted/user_group_quote.php:208
 msgid "Room description"
-msgstr ""
+msgstr "Popis pokoje"
 
 #: ../code/application/views/restricted/user_group_quote.php:211
 #, fuzzy
@@ -2697,20 +2704,20 @@ msgstr "Cena za pokoj (nikoliv za osobu)"
 
 #: ../code/application/views/restricted/user_group_quote.php:266
 msgid "Offer Expiry date"
-msgstr ""
+msgstr "Nabídka vyprší dne"
 
 #: ../code/application/views/restricted/user_group_quote.php:267
 msgid "Non-refundable and non-transferable deposit to secure this booking"
-msgstr ""
+msgstr "Nevratná a nepřevoditelná záloha pro zajištění této rezervace"
 
 #: ../code/application/views/restricted/user_group_quote.php:287
 #, php-format
 msgid "If the offer is accepted, the balance must be paid on %s"
-msgstr ""
+msgstr "Jestliže je nabídka přijata, musí být částka zaplacena do %s"
 
 #: ../code/application/views/restricted/user_group_quote.php:299
 msgid "Special Notes"
-msgstr ""
+msgstr "Speciální poznámky"
 
 #: ../code/application/views/restricted/user_group_quote.php:303
 #, fuzzy
@@ -2722,12 +2729,16 @@ msgid ""
 "The deposit is to be paid in British pounds as our Worldwide group center is "
 "located in London, England."
 msgstr ""
+"Záloha musí být zaplacena v britských librách, protože naše Worldwide group "
+"center sídlí v Londýně v Anglii."
 
 #: ../code/application/views/restricted/user_group_quote.php:308
 msgid ""
 "The Average price per person per night is for the requested arrival date and "
 "length of stay, actual day-by-day prices may vary."
 msgstr ""
+"Průměrná cena  za osobu a noc platí pro požadovaný den příjezdu a délku "
+"pobytu.Aktuální ceny se mohou den ode dne lišit."
 
 #: ../code/application/views/restricted/user_group_quote.php:310
 msgid ""
@@ -2751,6 +2762,9 @@ msgid ""
 "Final balance payments will be subject to the exchange rate available 49 "
 "days prior to arrival date."
 msgstr ""
+"Směnný kurz je kalkulován z běžného bankomatového /ATM/ kurzu na www.oanda."
+"com.Konečná částka k zaplacení se řídí kurzem platným 49 dnů přede dnem "
+"příjezdu."
 
 #: ../code/application/views/restricted/user_group_quote.php:316
 #, php-format
@@ -2764,12 +2778,16 @@ msgid ""
 "As this is a group booking, group leader will need to be present at check in "
 "and the property may require\ta security bond at check-in."
 msgstr ""
+"Protože se jedná o skupinovou rezervaci, vedoucí skupiny musí být přítomen "
+"při příjezdu do ubytovacího zařízení a může být požádán o složení kauce."
 
 #: ../code/application/views/restricted/user_group_quote.php:325
 msgid ""
 "Unpaid fees or transfer of insufficient funds may lead to cancellation of "
 "your booking."
 msgstr ""
+"Nesplacení poplatků nebo převod nedostatečné peněžní částky může vést ke "
+"zrušení vaší rezervace."
 
 #: ../code/application/views/restricted/user_profile.php:28
 msgid "Votre Profil"
@@ -3518,6 +3536,8 @@ msgid ""
 "No Beds could be found for your search criteria. Please change your dates "
 "and try again."
 msgstr ""
+"Nebyla nalazena žádná lůžka splňujcí zadaná kritéria.Prosím zmeňte svá data "
+"a zkuste znovu."
 
 #: ../code/application/views/hw/booking_avail_view.php:523
 #: ../code/application/views/hb/booking_avail_view.php:425
@@ -4195,19 +4215,19 @@ msgstr "Dobrý den"
 #: ../code/application/views/helpfile/pofields.php:572
 #, php-format
 msgid "Good news!"
-msgstr ""
+msgstr "Dobrá zpráva!"
 
 #: ../code/application/views/email/admin/new_group_request.php:6
 #: ../code/application/views/helpfile/pofields.php:573
 #, php-format
 msgid "We have found a great offer for your group."
-msgstr ""
+msgstr "Máme pro vaši skupinu výbornou nabídku."
 
 #: ../code/application/views/email/admin/new_group_request.php:8
 #: ../code/application/views/helpfile/pofields.php:574
 #, php-format
 msgid "Please take a look at the attached file for more details."
-msgstr ""
+msgstr "Prosím prohlédněte si podrobnosti v přiložené složce."
 
 #: ../code/application/views/email/admin/new_group_request.php:10
 #: ../code/application/views/helpfile/pofields.php:576
@@ -4246,7 +4266,7 @@ msgstr "Nejnižší věk "
 #: ../code/application/views/email/admin/new_group_request.php:31
 #: ../code/application/views/group_request.php:176
 msgid "Staff/teachers/Coaches/Bus drivers Details"
-msgstr "Zaměstnanci/učitelé/trenéři/řidiči autobusů detaily  "
+msgstr "Personál/učitelé/autokary/řidiči autobusů/detaily"
 
 #: ../code/application/views/email/admin/new_group_request.php:32
 #: ../code/application/views/group_request.php:179
@@ -4366,8 +4386,8 @@ msgid ""
 "Send a free request now using the form below and we will get back to you in "
 "few hours."
 msgstr ""
-"Pošlete váš požadavek zdarma pomocí níže uvedeného formuláře a my se vám "
-"ozveme zpět během pár hodin. "
+"Zašlete nyní nezávaznou poptávku prostřednictvím formuláře níže a my se vám "
+"ozveme během několika hodin."
 
 #: ../code/application/views/group_request.php:41
 #: ../code/application/views/helpfile/pofields.php:149
@@ -4470,13 +4490,13 @@ msgstr "Pokoje pro tři"
 
 #: ../code/application/views/group_request.php:193
 msgid "In the dormss with the group"
-msgstr ""
+msgstr "Skupinové ubytování na koleji/v hostelu"
 
 #: ../code/application/views/group_request.php:200
 #: ../code/application/views/helpfile/pofields.php:568
 #, php-format
 msgid "Total Number of people in your group: %s"
-msgstr ""
+msgstr "Celkový počet lidí ve vaší skupině: %s"
 
 #: ../code/application/views/group_request.php:206
 #: ../code/application/views/group_request.php:212
@@ -4494,6 +4514,8 @@ msgstr "Ne"
 msgid ""
 "Please provide a phone number where we can reach you from 4:00 pm to 9:00 pm."
 msgstr ""
+"Prosím poskytněte nám vaše telefonní číslo, abychom vám mohli zavolat mezi "
+"16.00 a 19.00 hod."
 
 #: ../code/application/views/group_request.php:279
 #: ../code/application/views/helpfile/pofields.php:564
@@ -4503,18 +4525,20 @@ msgid ""
 "availability, we would need to know the following, when will you be able to "
 "book?"
 msgstr ""
+"Pro velkou poptávku a časové omezení, kdy může být hostel k dispozici "
+"potřebujeme vědět, kdy budeme moci rezervovat."
 
 #: ../code/application/views/group_request.php:282
 #: ../code/application/views/helpfile/pofields.php:565
 #, php-format
 msgid "I just want an idea of the price and property"
-msgstr ""
+msgstr "Chci si jen udělat představu o ceně a ubytovacím zařízení."
 
 #: ../code/application/views/group_request.php:283
 #: ../code/application/views/helpfile/pofields.php:566
 #, php-format
 msgid "Within 1 week or less"
-msgstr ""
+msgstr "Maximálně do týdne"
 
 #: ../code/application/views/group_request.php:296
 #: ../code/application/views/helpfile/pofields.php:88
@@ -4523,7 +4547,7 @@ msgstr "Podat"
 
 #: ../code/application/views/group_request.php:305
 msgid "Thank you. Our team will contact you within few hours"
-msgstr "Děkujeme vám. Náš tým vás bude kontaktovat během několika hodin. "
+msgstr "Děkujeme.Naši pracovníci vás budou kontaktovat během několika hodin"
 
 #: ../code/application/views/helpfile/pofields.php:2
 #: ../code/application/views/helpfile/pofields.php:253
@@ -6206,7 +6230,7 @@ msgstr "Mimořádný "
 #: ../code/application/views/helpfile/pofields.php:417
 #, php-format
 msgid "Very good"
-msgstr "Velmi dobrý "
+msgstr "Velmi dobře"
 
 #: ../code/application/views/helpfile/pofields.php:418
 #, php-format
@@ -6728,6 +6752,8 @@ msgid ""
 "We want to make sure you are 100%% satisfied, so do not hesitate to contact "
 "us."
 msgstr ""
+"Chceme se ujistit, že budete stoprocentně spokojeni, a proto neváhejte a "
+"kontaktujte nás."
 
 #: ../code/application/views/helpfile/pofields.php:583
 #, php-format
@@ -6837,11 +6863,13 @@ msgid ""
 "To view all available properties on the map, please enter your dates in the "
 "box on the top right."
 msgstr ""
+"Pro zobrazení všech dostupných realit na mapě prosím vložte svá data do boxu "
+"vpravo nahoře."
 
 #: ../code/application/views/helpfile/pofields.php:604
-#, fuzzy, php-format
+#, php-format
 msgid "Selected filters:"
-msgstr "Přenastav filtry"
+msgstr "Vybrané filtry:"
 
 #: ../code/application/views/helpfile/pofields.php:605
 #, php-format
@@ -6856,17 +6884,17 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:607
 #, php-format
 msgid "The request cannot be fulfilled due to bad syntax"
-msgstr ""
+msgstr "Požadavek nemůže být splněn kvůli vadné syntaxi"
 
 #: ../code/application/views/helpfile/pofields.php:608
-#, fuzzy, php-format
+#, php-format
 msgid "Your changes has been saved successfully"
-msgstr "Vaše žádost o podporu byla úspěšně odeslána"
+msgstr "Vaše změny byly úspěšně uloženy"
 
 #: ../code/application/views/helpfile/pofields.php:609
-#, fuzzy, php-format
+#, php-format
 msgid "Next available property"
-msgstr "Žádné pokoje nejsou k dispozici pro toto zařízení."
+msgstr "Následující realita k dispozici"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
