Added English translation.

--- a/languages/ci/locale/en_GB/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/en_GB/LC_MESSAGES/auberge_lang.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-02 20:03+0200\n"
+"PO-Revision-Date: 2013-02-21 20:12+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2638,13 +2637,13 @@ msgid "Are the dates and number of people confirmed or will they change?"
 msgstr "Are the dates and number of people confirmed or will they change?"
 
 #: ../code/application/views/restricted/user_group_quote.php:137
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "When will you be ready to make a payment to secure your booking with a 20%% "
 "deposit?"
 msgstr ""
-"When will you be ready to make a payment to secure your booking with a "
-"20% deposit?"
+"When will you be ready to make a payment to secure your booking with a 20%% "
+"deposit?"
 
 #: ../code/application/views/restricted/user_group_quote.php:150
 msgid "Group booking quote information"
@@ -2768,12 +2767,12 @@ msgstr ""
 "days prior to arrival date."
 
 #: ../code/application/views/restricted/user_group_quote.php:316
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "All card payments incur a 2%% fee and all bank fees are to be paid by the "
 "booking party."
 msgstr ""
-"All card payments incur a 2% fee and all bank fees are to be paid by the "
+"All card payments incur a 2%% fee and all bank fees are to be paid by the "
 "booking party."
 
 #: ../code/application/views/restricted/user_group_quote.php:318
@@ -4332,7 +4331,6 @@ msgid "Your details"
 msgstr "Your details"
 
 #: ../code/application/views/email/admin/new_group_request.php:43
-#, fuzzy
 msgid "Addresse Email"
 msgstr "Email Address"
 
@@ -6766,12 +6764,12 @@ msgstr ""
 "us know also right away."
 
 #: ../code/application/views/helpfile/pofields.php:581
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "We want to make sure you are 100%% satisfied, so do not hesitate to contact "
 "us."
 msgstr ""
-"We want to make sure you are 100% satisfied, so do not hesitate to contact "
+"We want to make sure you are 100%% satisfied, so do not hesitate to contact "
 "us."
 
 #: ../code/application/views/helpfile/pofields.php:583
@@ -6881,12 +6879,12 @@ msgstr "We will shortly send your voucher to the email address on file."
 #: ../code/application/views/helpfile/pofields.php:601
 #, php-format
 msgid "Great"
-msgstr ""
+msgstr "Great"
 
 #: ../code/application/views/helpfile/pofields.php:602
 #, php-format
 msgid "Fantastic"
-msgstr ""
+msgstr "Fantastic"
 
 #: ../code/application/views/helpfile/pofields.php:603
 #, php-format
@@ -6894,11 +6892,13 @@ msgid ""
 "To view all available properties on the map, please enter your dates in the "
 "box on the top right."
 msgstr ""
+"To view all available properties on the map, please enter your dates in the "
+"box on the top right."
 
 #: ../code/application/views/helpfile/pofields.php:604
-#, fuzzy, php-format
+#, php-format
 msgid "Selected filters:"
-msgstr "Reset filters"
+msgstr "Selected filters:"
 
 #: ../code/application/views/helpfile/pofields.php:605
 #, fuzzy, php-format
@@ -6906,19 +6906,19 @@ msgid "Total Number of people in your groups: %s"
 msgstr "Total Number of people in your group: %s"
 
 #: ../code/application/views/helpfile/pofields.php:606
-#, fuzzy, php-format
+#, php-format
 msgid "If the offer is accepted, the balance must be paid by %s"
-msgstr "If the offer is accepted, the balance must be paid on %s"
+msgstr "If the offer is accepted, the balance must be paid by %s"
 
 #: ../code/application/views/helpfile/pofields.php:607
 #, php-format
 msgid "The request cannot be fulfilled due to bad syntax"
-msgstr ""
+msgstr "The request cannot be fulfilled due to bad syntax"
 
 #: ../code/application/views/helpfile/pofields.php:608
-#, fuzzy, php-format
+#, php-format
 msgid "Your changes has been saved successfully"
-msgstr "Your request for support has been successfully sent."
+msgstr "Your changes has been saved successfully"
 
 #: ../code/application/views/helpfile/pofields.php:609
 #, fuzzy, php-format
