Corrected some RU and DE strings

--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-23 20:44+0200\n"
+"PO-Revision-Date: 2013-02-26 21:44+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -1446,7 +1446,7 @@ msgstr "Указать даты"
 #: ../code/application/views/city_ajax_view.php:548
 #: ../code/application/views/city_ajax_view.php:638
 msgid "Prix"
-msgstr "Цыне"
+msgstr "Цена"
 
 #: ../code/application/views/mobile/city_view.php:44
 #: ../code/application/views/mobile/hw/hostel_view.php:21
@@ -3187,7 +3187,7 @@ msgstr "Сброс фильтров"
 #: ../code/application/views/city_view.php:31
 #: ../code/application/views/group_request.php:217
 msgid "Price"
-msgstr "Цына"
+msgstr "Цена"
 
 #: ../code/application/views/city_view.php:34
 #: ../code/application/views/helpfile/pofields.php:457
