--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-20 22:02+0200\n"
+"PO-Revision-Date: 2013-02-26 22:14+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -2700,7 +2700,7 @@ msgstr ""
 #: ../code/application/views/restricted/user_group_quote.php:287
 #, php-format
 msgid "If the offer is accepted, the balance must be paid on %s"
-msgstr "Ha az ajánlatot elfogadja, az számlát ki kell egyenlítenie %s"
+msgstr "Ha az ajánlatot elfogadja, az számlát %s -ig ki kell egyenlítenie"
 
 #: ../code/application/views/restricted/user_group_quote.php:299
 msgid "Special Notes"
@@ -6885,7 +6885,7 @@ msgstr "A csoport összlétszáma: %s"
 #: ../code/application/views/helpfile/pofields.php:606
 #, php-format
 msgid "If the offer is accepted, the balance must be paid by %s"
-msgstr "Ha az ajánlatot elfogadja, az számlát ki kell egyenlítenie %s"
+msgstr "Ha az ajánlatot elfogadja, az számlát %s -ig ki kell egyenlítenie"
 
 #: ../code/application/views/helpfile/pofields.php:607
 #, php-format
