--- a/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-20 22:16+0200\n"
+"PO-Revision-Date: 2013-02-26 22:05+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -2694,7 +2694,7 @@ msgstr "予約確定のためのデポジットは返金、譲渡不可となり
 #: ../code/application/views/restricted/user_group_quote.php:287
 #, php-format
 msgid "If the offer is accepted, the balance must be paid on %s"
-msgstr "ご予約完了後、残金は までにお支払ください。%s"
+msgstr "ご予約完了後、残金は %s までにお支払ください。"
 
 #: ../code/application/views/restricted/user_group_quote.php:299
 msgid "Special Notes"
@@ -6813,7 +6813,7 @@ msgstr "お客様のグループの総予約人数: %s"
 #: ../code/application/views/helpfile/pofields.php:606
 #, php-format
 msgid "If the offer is accepted, the balance must be paid by %s"
-msgstr "ご予約完了後、残金は までにお支払ください。%s"
+msgstr "ご予約完了後、残金は %s までにお支払ください。"
 
 #: ../code/application/views/helpfile/pofields.php:607
 #, php-format
