--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-20 22:13+0200\n"
+"PO-Revision-Date: 2013-02-26 22:02+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -2673,7 +2673,7 @@ msgstr "예약금은 환불이 불가하며 타인에게 양도될 수 없습니
 #: ../code/application/views/restricted/user_group_quote.php:287
 #, php-format
 msgid "If the offer is accepted, the balance must be paid on %s"
-msgstr "제안이 승인되면, 잔액은 일까지 지불하셔야합니다 %s"
+msgstr "제안이 승인되면, 잔액은 %s 일까지 지불하셔야합니다"
 
 #: ../code/application/views/restricted/user_group_quote.php:299
 msgid "Special Notes"
@@ -6791,7 +6791,7 @@ msgstr "귀하의 단체 총인원수: %s"
 #: ../code/application/views/helpfile/pofields.php:606
 #, php-format
 msgid "If the offer is accepted, the balance must be paid by %s"
-msgstr "제안이 승인되면, 잔액은 일까지 지불하셔야합니다 %s"
+msgstr "제안이 승인되면, 잔액은 %s 일까지 지불하셔야합니다"
 
 #: ../code/application/views/helpfile/pofields.php:607
 #, php-format
