--- a/languages/ci/locale/en_NZ/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/en_NZ/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-21 21:19+0200\n"
+"PO-Revision-Date: 2013-02-28 22:57+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -546,7 +546,7 @@ msgstr "Worldwide booking - 30,000 hostels and low-cost hotels."
 #: ../code/application/views/includes/footer.php:36
 #: ../code/application/views/includes/header.php:888
 msgid "Accueil"
-msgstr "New Search"
+msgstr "Home"
 
 #: ../code/application/views/includes/top_box.php:54
 #: ../code/application/views/includes/footer.php:47
