--- a/languages/ci/locale/en_NZ/LC_MESSAGES/auberge_lang_yh_nz.po
+++ b/languages/ci/locale/en_NZ/LC_MESSAGES/auberge_lang_yh_nz.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-02 20:04+0200\n"
+"PO-Revision-Date: 2013-02-28 22:57+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -542,7 +541,7 @@ msgstr "30,000 hostels and cheap hotels."
 #: ../code/application/views/includes/footer.php:36
 #: ../code/application/views/includes/header.php:888
 msgid "Accueil"
-msgstr "New search"
+msgstr "Home"
 
 #: ../code/application/views/includes/top_box.php:54
 #: ../code/application/views/includes/footer.php:47
