--- a/languages/ci/locale/pl_PL/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/pl_PL/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-20 22:13+0200\n"
+"PO-Revision-Date: 2013-02-28 22:37+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -541,7 +541,7 @@ msgstr "Natychmiastowa rezerwacja na całym świecie, 30 000 tanich hosteli."
 #: ../code/application/views/includes/footer.php:36
 #: ../code/application/views/includes/header.php:888
 msgid "Accueil"
-msgstr "Nowe wyszukiwanie"
+msgstr "Powitanie"
 
 #: ../code/application/views/includes/top_box.php:54
 #: ../code/application/views/includes/footer.php:47
