--- a/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-20 22:24+0200\n"
+"PO-Revision-Date: 2013-02-28 22:50+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -553,7 +553,7 @@ msgstr "Reservas imediatas no mundo inteiro, 30.000 albergues baratos."
 #: ../code/application/views/includes/footer.php:36
 #: ../code/application/views/includes/header.php:888
 msgid "Accueil"
-msgstr "Nova procura"
+msgstr "Página Inicial"
 
 #: ../code/application/views/includes/top_box.php:54
 #: ../code/application/views/includes/footer.php:47
