--- a/languages/ci/locale/cs_CZ/LC_MESSAGES/auberge_lang_ml.po
+++ b/languages/ci/locale/cs_CZ/LC_MESSAGES/auberge_lang_ml.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-23 20:32+0200\n"
+"PO-Revision-Date: 2013-02-28 22:51+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -545,7 +545,7 @@ msgstr "30 000 ubytoven a levných hotelů."
 #: ../code/application/views/includes/footer.php:36
 #: ../code/application/views/includes/header.php:888
 msgid "Accueil"
-msgstr "Nové vyhledávání"
+msgstr "Vítejte"
 
 #: ../code/application/views/includes/top_box.php:54
 #: ../code/application/views/includes/footer.php:47
