--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 17:28+0200\n"
-"PO-Revision-Date: 2013-02-26 22:02+0200\n"
+"PO-Revision-Date: 2013-02-28 22:39+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -537,7 +537,7 @@ msgstr "30,000 호스텔과 저렴한 호스텔 예약."
 #: ../code/application/views/includes/footer.php:36
 #: ../code/application/views/includes/header.php:888
 msgid "Accueil"
-msgstr "새로 검색"
+msgstr "홈페이지"
 
 #: ../code/application/views/includes/top_box.php:54
 #: ../code/application/views/includes/footer.php:47
