changes in ru, added string MCWEB-216

--- a/languages/wp/ru_RU_xo.po
+++ b/languages/wp/ru_RU_xo.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-13 13:57-0800\n"
-"PO-Revision-Date: 2013-02-02 20:09+0200\n"
+"PO-Revision-Date: 2013-03-03 20:34+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -549,11 +549,11 @@ msgstr "Более 30 000 хостелов онлайн"
 
 #: header.php:276
 msgid "Free SMS"
-msgstr "Бесплатный СМС"
+msgstr "Бесплатные СМС"
 
 #: header.php:283
 msgid "No Booking fees"
-msgstr "Бесплатное бронироние"
+msgstr "Бесплатное бронирование"
 
 #: header.php:285
 msgid "Check your reservation on your mobile"
@@ -904,7 +904,7 @@ msgstr "Подтверждение по электронной почте"
 
 #: tools/pofield.php:5
 msgid "Room type and number of guests"
-msgstr "Тип конаты и количество гостей"
+msgstr "Тип комнаты и количество гостей"
 
 #: tools/pofield.php:6
 msgid "Book Now"
@@ -1014,7 +1014,7 @@ msgstr "Сообщение для родителей"
 
 #: tools/pofield.php:35
 msgid "Why booking with us ?"
-msgstr "В чем преимущество бронирования через нас?"
+msgstr "В чем преимущество бронирования через нас ?"
 
 #: tools/pofield.php:38
 msgid "Booking Guarantee"
